Fix flex overflow-y issue for small page heights

--- a/src/pages/Landing/landing.css
+++ b/src/pages/Landing/landing.css
@@ -1,5 +1,6 @@
 .landing {
     height: 100%;
+    min-height: 500px;
     position: relative;
     padding: 2rem;
     padding-left: 4rem;
